Use real threads for profiling job
Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>