@@ -51,7 +51,13 @@ public class LoomKafkaConsumer<K, V> implements ReactiveKafkaConsumer<K, V> {
         this.taskQueue = new LinkedBlockingQueue<>();
         this.isClosed = new AtomicBoolean(false);
 
-        this.taskRunnerThread = Thread.ofVirtual().start(this::processTaskQueue);
+        if (Boolean.parseBoolean(System.getenv("DISABLE_VIRTUAL_THREADS"))) {
+          this.taskRunnerThread = new Thread(this::processTaskQueue);
+          this.taskRunnerThread.start();
+        } else {
+          this.taskRunnerThread = Thread.ofVirtual().start(this::processTaskQueue);
+        }
+
     }
 
     private void addTask(Runnable task, Promise<?> promise) {
